[gd_scene load_steps=20 format=3 uid="uid://cpmhsg1wuq0hd"]

[ext_resource type="PackedScene" uid="uid://c6m6q53ykyin3" path="res://Cards/Spawns/Player/play.tscn" id="1_ppcls"]
[ext_resource type="Texture2D" uid="uid://dydq3ae7i7mnj" path="res://Cards/Spawns/Player/Images/trashman.png" id="2_d34ig"]
[ext_resource type="Script" path="res://Cards/Spawns/Player/wastoid.gd" id="2_ithgw"]
[ext_resource type="Texture2D" uid="uid://bn0btc3qv7xdy" path="res://Cards/Spawns/Player/Images/trashpickups.png" id="4_47gtp"]
[ext_resource type="Script" path="res://Cards/Spawns/Player/Hand.gd" id="5_atcta"]
[ext_resource type="Texture2D" uid="uid://cg6kfai5esh2r" path="res://Cards/Spawns/Player/Images/trashpickupframe.png" id="5_p0v3x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1nxy3"]
size = Vector2(84.5, 54)

[sub_resource type="Animation" id="Animation_8hnk4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hands/Trashpickups:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-178, -1504)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hands/Trashpickups2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(131, -1952)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Hands/Trashpickups3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5, -1840)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Hands/Trashpickups:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.14159]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Hands/Trashpickups2:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.14159]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Hands/Trashpickups3:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.14159]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, -159)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../Hands:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ixs3j"]
resource_name = "death"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 76]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hands:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hands/Trashpickups:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.6, 2, 2.2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-178, -2133), Vector2(-178, -603), Vector2(-178, -603), Vector2(-178, -1343)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Hands/Trashpickups2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.6, 2, 2.2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(131, -1952), Vector2(131, -673), Vector2(131, -673), Vector2(131, -1222)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Hands/Trashpickups3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.6, 2, 2.2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-45, -1840), Vector2(-45, -818), Vector2(-45, -818), Vector2(-45, -1457)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2.2, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, -159), Vector2(3, -823)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("..")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"destroy"
}]
}

[sub_resource type="Animation" id="Animation_axu3c"]
resource_name = "destroy"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 80]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hands/Trashpickups:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.7, 2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-178, -2133), Vector2(-178, -405), Vector2(-178, -405), Vector2(-178, -2133)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hands/Trashpickups2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.8, 2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(131, -1952), Vector2(131, -317), Vector2(131, -317), Vector2(131, -1952)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Hands/Trashpickups3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 0.9, 2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-5, -1840), Vector2(-5, -264), Vector2(-5, -264), Vector2(-5, -1840)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Hands:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"destroy_card"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Hands/Trashpickups:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.14159]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Hands/Trashpickups2:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.14159]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../Hands/Trashpickups3:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.14159]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("..:card_under_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.596078, 0.988235, 1)]
}

[sub_resource type="Animation" id="Animation_o2he0"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hands:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_uq6jr"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hands:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ivdpf"]
_data = {
"RESET": SubResource("Animation_8hnk4"),
"death": SubResource("Animation_ixs3j"),
"destroy": SubResource("Animation_axu3c"),
"idle": SubResource("Animation_o2he0"),
"walk": SubResource("Animation_uq6jr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2q23b"]
size = Vector2(134, 442)

[sub_resource type="CircleShape2D" id="CircleShape2D_663v2"]
radius = 1673.41

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ovavi"]
b = Vector2(0, -90)

[sub_resource type="Animation" id="Animation_ypwyh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:b")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -90)]
}

[sub_resource type="Animation" id="Animation_owirx"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:b")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -90), Vector2(0, -191), Vector2(0, -300.065), Vector2(0, -420), Vector2(0, -540), Vector2(0, -420), Vector2(0, -300.065), Vector2(0, -191), Vector2(0, -90)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t0abq"]
_data = {
"RESET": SubResource("Animation_ypwyh"),
"default": SubResource("Animation_owirx")
}

[node name="Wastoid" instance=ExtResource("1_ppcls")]
script = ExtResource("2_ithgw")
BASESPEED = 60.0
BASEHEALTH = 30
card_under_modulate = Color(1, 0.596078, 0.988235, 1)

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(7, 82)
shape = SubResource("RectangleShape2D_1nxy3")

[node name="Sprite2D" parent="." index="1"]
position = Vector2(3, -159)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_d34ig")
hframes = 5
vframes = 17

[node name="AnimationPlayer" parent="Sprite2D" index="0"]
libraries = {
"": SubResource("AnimationLibrary_ivdpf")
}

[node name="Hands" type="Node2D" parent="." index="2"]
visible = false

[node name="Trashpickups" type="Sprite2D" parent="Hands" index="0"]
position = Vector2(-178, -1504)
rotation = -3.14159
scale = Vector2(2, 2)
texture = ExtResource("4_47gtp")

[node name="Trashpickups2" type="Sprite2D" parent="Hands" index="1"]
position = Vector2(131, -1952)
rotation = -3.14159
scale = Vector2(2, 2)
texture = ExtResource("4_47gtp")

[node name="Trashpickups3" type="Sprite2D" parent="Hands" index="2"]
position = Vector2(-5, -1840)
rotation = -3.14159
scale = Vector2(2, 2)
texture = ExtResource("4_47gtp")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(9, -87)
shape = SubResource("RectangleShape2D_2q23b")

[node name="Area2D" type="Area2D" parent="." index="5"]
position = Vector2(8, 104)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2(9, -117)
shape = SubResource("CircleShape2D_663v2")

[node name="Hand" type="AnimatableBody2D" parent="." index="6"]
visible = false
collision_layer = 0
collision_mask = 16
sync_to_physics = false
script = ExtResource("5_atcta")
damage = 4.0
maxAge = 1.5

[node name="Sprite2D" type="Sprite2D" parent="Hand" index="0"]
position = Vector2(0, -295)
texture = ExtResource("5_p0v3x")
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hand" index="1"]
position = Vector2(2, 5)
shape = SubResource("SegmentShape2D_ovavi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hand" index="2"]
libraries = {
"": SubResource("AnimationLibrary_t0abq")
}

[connection signal="frame_changed" from="Sprite2D" to="." method="_on_sprite_2d_frame_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
